Fixed - Downloading or uploading artifacts over insecure protocol/ HTTP >> HTTPS

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ buildscript {
     repositories {
         jcenter()
         maven { url 'https://jitpack.io' }
-        maven { url "http://dl.bintray.com/kotlin/kotlin-dev" }
+        maven { url "https://dl.bintray.com/kotlin/kotlin-dev" }
         maven { url "https://dl.bintray.com/jetbrains/markdown/" }
         maven { url "https://dl.bintray.com/arrow-kt/arrow-kt/" }
     }
@@ -54,8 +54,8 @@ apply plugin: 'org.ajoberstar.git-publish'
 repositories {
     jcenter()
     maven { url 'https://kotlin.bintray.com/kotlinx' }
-    maven { url "http://dl.bintray.com/kotlin/kotlin-dev" }
-    maven { url "http://dl.bintray.com/arrow-kt/arrow-kt" }
+    maven { url "https://dl.bintray.com/kotlin/kotlin-dev" }
+    maven { url "https://dl.bintray.com/arrow-kt/arrow-kt" }
     maven { url "https://dl.bintray.com/jetbrains/markdown/" }
     maven { url 'https://jitpack.io' }
 }
